Add surefire and mem db